--- a/package.json
+++ b/package.json
@@ -1,1 +1,39 @@
-{"homepage":"https://singh-harnoor.github.io/AIos","name":"chat-app","version":"0.1.0","private":true,"dependencies":{"firebase":"^10.0.0","react":"^18.2.0","react-dom":"^18.2.0","web-vitals":"^5.1.0"},"scripts":{"start":"react-scripts start","build":"react-scripts build","test":"react-scripts test","eject":"react-scripts eject","predeploy":"npm run build","deploy":"gh-pages -d build","tailwind:init":"./node_modules/.bin/tailwindcss init -p"},"devDependencies":{"autoprefixer":"^10.4.22","gh-pages":"^6.3.0","postcss":"^8.5.6","tailwindcss":"^3.4.18"},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]}}
+{
+    "homepage": "https://singh-harnoor.github.io/AIos",
+    "name": "chat-app",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+      "firebase": "^10.0.0",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "web-vitals": "^5.1.0"
+    },
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build -b main"
+    },
+    "devDependencies": {
+      "autoprefixer": "^10.4.22",
+      "gh-pages": "^6.3.0",
+      "postcss": "^8.5.6",
+      "react-scripts": "5.0.1",
+      "tailwindcss": "^3.4.18"
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
+    }
+  }
